force-app/main/default/objects/Risk_Assessment__c/fields/Additional_Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compliance_Notes__c</fullName>
    <description>Additional compliance notes or observations.</description>
    <label>Additional Compliance Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>