force-app/main/default/objects/Risk_Assessment__c/fields/Additional_UBOs__c.field-meta.xml
<CustomField>
    <fullName>Additional_UBOs__c</fullName>
    <description>Whether there are ultimate beneficial owners not listed in the shareholders section.</description>
    <label>Additional UBOs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>