force-app/main/default/objects/Risk_Assessment__c/fields/Calculated_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Risk_Score__c</fullName>
    <description>Numeric risk score calculated by automated risk assessment rules.</description>
    <label>Calculated Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>