force-app/main/default/objects/Risk_Assessment__c/fields/EDD_Reason__c.field-meta.xml
<CustomField>
    <fullName>EDD_Reason__c</fullName>
    <description>Explanation of why enhanced due diligence is required.</description>
    <label>EDD Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>