force-app/main/default/objects/Risk_Assessment__c/fields/EDD_Required__c.field-meta.xml
<CustomField>
    <fullName>EDD_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether enhanced due diligence is required for this application.</description>
    <label>EDD Required</label>
    <type>Checkbox</type>
</CustomField>