force-app/main/default/objects/Risk_Assessment__c/fields/Financial_Crime_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Financial_Crime_Conviction__c</fullName>
    <description>Whether any directors or owners have been convicted of financial crimes.</description>
    <label>Financial Crime Conviction?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>