force-app/main/default/objects/Risk_Assessment__c/fields/High_Risk_Jurisdiction_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Jurisdiction_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any high-risk jurisdiction is involved in the application.</description>
    <label>High-Risk Jurisdiction Flag</label>
    <type>Checkbox</type>
</CustomField>