force-app/main/default/objects/Risk_Assessment__c/fields/On_Sanctions_List__c.field-meta.xml
<CustomField>
    <fullName>On_Sanctions_List__c</fullName>
    <description>Whether the business or any owners appear on sanctions lists. Any &apos;Yes&apos; stops auto-processing and routes to compliance review.</description>
    <label>On Sanctions List?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>