force-app/main/default/objects/Risk_Assessment__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <description>Parent onboarding application this risk assessment belongs to.</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>