force-app/main/default/objects/Risk_Assessment__c/fields/PEP_Flag__c.field-meta.xml
<CustomField>
    <fullName>PEP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any party in the application is a politically exposed person.</description>
    <label>PEP Flag</label>
    <type>Checkbox</type>
</CustomField>