force-app/main/default/objects/Risk_Assessment__c/fields/PEP_In_Organization__c.field-meta.xml
<CustomField>
    <fullName>PEP_In_Organization__c</fullName>
    <description>Whether any owners, directors or authorised users are politically exposed persons. Pre-filled from earlier responses; a &apos;Yes&apos; triggers enhanced due diligence.</description>
    <label>PEP in Organization?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>