force-app/main/default/objects/Risk_Assessment__c/fields/Private_Estimated_Transactions_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Private_Estimated_Transactions_per_Month__c</fullName>
    <description>Estimated number of transactions per month for private clients.</description>
    <label>Private Estimated Transactions per Month</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>