force-app/main/default/objects/Risk_Assessment__c/fields/Private_Expected_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Private_Expected_Monthly_Volume__c</fullName>
    <description>Expected monthly transaction volume for private clients (triggers enhanced due diligence if above threshold).</description>
    <label>Private Expected Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>