force-app/main/default/objects/Risk_Assessment__c/fields/Private_Geographic_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Private_Geographic_Exposure__c</fullName>
    <description>Countries where funds will come from or go to for private clients.</description>
    <label>Private Geographic Exposure</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>