force-app/main/default/objects/Risk_Assessment__c/fields/Private_Intended_Use_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Private_Intended_Use_of_Account__c</fullName>
    <description>Intended use of account for private clients.</description>
    <label>Private Intended Use of Account</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>