force-app/main/default/objects/Risk_Assessment__c/fields/Private_Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Private_Source_of_Wealth__c</fullName>
    <description>Source of wealth for private clients.</description>
    <label>Private Source of Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business_Ownership</fullName>
                <label>Business Ownership</label>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>Investment_Income</fullName>
                <label>Investment Income</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>