force-app/main/default/objects/Risk_Assessment__c/fields/Private_Source_of_Wealth_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Private_Source_of_Wealth_Explanation__c</fullName>
    <description>Detailed explanation of source of wealth for private clients.</description>
    <label>Private Source of Wealth - Explanation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>