force-app/main/default/objects/Risk_Assessment__c/fields/Provides_Money_Services__c.field-meta.xml
<CustomField>
    <fullName>Provides_Money_Services__c</fullName>
    <description>Whether the business provides money services (remittances, payment processing, currency exchange, crypto brokerage) on behalf of others. A &apos;Yes&apos; triggers licensing checks.</description>
    <label>Provides Money Services?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>