force-app/main/default/objects/Risk_Assessment__c/fields/Restricted_Activity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Activity_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any restricted activity is selected in the application.</description>
    <label>Restricted Activity Flag</label>
    <type>Checkbox</type>
</CustomField>