force-app/main/default/objects/Risk_Assessment__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compliance user who reviewed this risk assessment.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Risk Assessments Reviewed</relationshipLabel>
    <relationshipName>Risk_Assessments_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>