force-app/main/default/objects/Risk_Assessment__c/fields/Reviewed_On__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_On__c</fullName>
    <description>Date and time when this risk assessment was reviewed by compliance.</description>
    <label>Reviewed On</label>
    <type>DateTime</type>
</CustomField>