force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <description>Final risk rating assigned after assessment (Low, Medium, High).</description>
    <label>Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>