force-app/main/default/objects/Risk_Assessment__c/fields/Sanctions_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sanctions_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if sanctions risk is detected in the application.</description>
    <label>Sanctions Flag</label>
    <type>Checkbox</type>
</CustomField>